@@ -15,6 +15,8 @@ CHANGES
 - Deprecate Application.finish() / Application.register_on_finish() in favor of
   on_cleanup.
 
-- Get rid of bare aiohttp.request(), aiohttp.get() and family #729
+- Get rid of bare aiohttp.request(), aiohttp.get() and family in docs #729
+
+- Deprecate bare aiohttp.request(), aiohttp.get() and family #729
 
   
